--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hack-pwa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://miloszsobczak.github.io/hack-pwa",
   "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
